# rl-project

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/docs/: index.md
guitarProject/: __init__.py  dataset.py  processing_tests.ipynb
guitarProject/input/: guitar_input.py  pedals.py
guitarProject/modeling/: train.py
guitarProject/notebooks/: input_sequence.ipynb  processing_tests.ipynb
guitarProject/postprocessing/: postprocess.py
guitarProject/preprocessing/: __init__.py  audio.py
guitar_project/: Makefile  README.md
guitar_project/docs/: mkdocs.yml
guitar_project/guitar_project/: __init__.py  features.py  plots.py
guitar_project/guitar_project/modeling/: predict.py
notebooks/: processing_tests.ipynb
