[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "guitar_project"
version = "0.0.1"
description = "Project to use reinforcement learning to recreate guitar waveforms"
authors = [
  { name = "MNs" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"


[tool.ruff]
line-length = 99
src = ["guitar_project"]
include = ["pyproject.toml", "guitar_project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["guitar_project"]
force-sort-within-sections = true

