[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "guitarProject"
version = "0.0.1"
description = "Project to use reinforcement learning to recreate guitar waveforms"
authors = [
  { name = "MNs" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"


[tool.ruff]
line-length = 99
src = ["guitarProject"]
include = ["pyproject.toml", "guitarProject/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["guitarProject"]
force-sort-within-sections = true

